--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <a class="navbar-brand" href="#"><i class="fab fa-medrt"></i></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-        aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -9,8 +9,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#">Главная</a>
             </li>
+            {{#if user}}
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Исследования
                 </a>
@@ -20,20 +21,33 @@
                     <a class="dropdown-item" href="#">Спирография</a>
                 </div>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Студенты
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="/students">Список</a>
+                    <a class="dropdown-item" href="/students/add">Добавить</a>
+                </div>
+            </li>
+            {{/if}}
         </ul>
         <ul class="navbar-nav ">
             {{#if user}}
-                <li class="nav-item"><p class="nav-p">{{user.username}}</p></li>
-                <li class="bav-item">
-                    <a class="nav-link" href="/users/logout">Выйти</a>
-                </li>
+            <li class="nav-item">
+                <p class="nav-p">{{user.username}}</p>
+            </li>
+            <li class="bav-item">
+                <a class="nav-link" href="/users/logout">Выйти</a>
+            </li>
             {{else}}
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/register">Регистрация</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/login">Вход</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/users/register">Регистрация</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/users/login">Вход</a>
+            </li>
             {{/if}}
         </ul>
     </div>
