--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,15 +1,15 @@
 <form action="/users/register" method="POST">
     <div class="form-group">
         <label for="username">Имя пользователся</label>
-        <input type="text" name="username" class="form-control">
+        <input type="text" name="username" class="form-control" value="{{username}}">
     </div>
     <div class="form-group">
         <label for="firstName">Имя</label>
-        <input type="text" name="firstName" class="form-control">
+        <input type="text" name="firstName" class="form-control" value="{{firstName}}">
     </div>
     <div class="form-group">
         <label for="lastName">Фамилия</label>
-        <input type="text" name="lastName" class="form-control">
+        <input type="text" name="lastName" class="form-control" value="{{lastName}}">
     </div>
     <div class="form-group">
         <label for="password">Пароль</label>
