--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,7 @@
         crossorigin="anonymous"></script>
     <script src="/js/tableScripts/sortTable.js"></script>
     <script src="/js/tableScripts/changeArrows.js"></script>
+    <script src = "/js/tableScripts/headerHelp.js"></script>
 </body>
 
 </html>
