--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -16,7 +16,7 @@
                     Исследования
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Антропометрия</a>
+                    <a class="dropdown-item" href="/antropology">Антропометрия</a>
                     <a class="dropdown-item" href="#">Морфология</a>
                     <a class="dropdown-item" href="#">Спирография</a>
                 </div>
