Add button modified with tooltip

--- a/views/researches/antropology/index.handlebars
+++ b/views/researches/antropology/index.handlebars
@@ -49,5 +49,5 @@
             {{/each}}
         </tbody>
     </table>
-    <a href = "/antropology/add" class = "add-button"><i data-tooltip="Добавить обследование" class = "fa fa-plus-circle"></i></a>
+    <a href = "/antropology/add" class = "add-button"><i data-tooltip="Добавить обследование" class = "fa fa-plus-circle helper"></i></a>
 </div>
