--- a/views/researches/antropology/index.handlebars
+++ b/views/researches/antropology/index.handlebars
@@ -1,3 +1,4 @@
+{{>_dashboard}}
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-sm">
         <thead class="thead-dark">
