--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,6 +1,8 @@
 <div class = "container">
-    <h1>Добро пожаловать!</h1>
-    <p>Для получение доступа к "потом придумаю", пожалуйста, зарегестрируйтесь или авторизируйтесь.</p>
-    <a href="/users/register" class = "btn btn-md btn-dark">Регистрация</a>
-    <a href="/users/login" class = "btn btn-md btn-dark">Вход</a>
+    <h1 class = "logo-img"><i class = "fab fa-medrt"></i></h1>
+    <h1 class="logo-header">Добро пожаловать!</h1>
+    <div class="logo-container">
+        <a href="/users/login" class = "btn btn-lg btn-dark logo-login">Вход</a>
+        <a href="/users/register" class = "btn btn-lg btn-dark logo-register">Регистрация</a>
+    </div>
 </div>
