--- a/views/partials/_dashboard.handlebars
+++ b/views/partials/_dashboard.handlebars
@@ -1,4 +1,4 @@
-<button class="search-button"><i class="fa fa-bars"></i></button>
+<button class="search-button"><i class="fa fa-search"></i></button>
 <div class="dashboard">
     <h3>Поиск</h3>
     <form action="{{way}}" method="POST">
