--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,6 +1,6 @@
 <form action="/users/register" method="POST">
     <div class="form-group">
-        <label for="username">Имя пользователся</label>
+        <label for="username">Имя пользователя</label>
         <input type="text" name="username" class="form-control" value="{{username}}">
     </div>
     <div class="form-group">
@@ -19,5 +19,9 @@
         <label for="password2">Подтвердите пароль</label>
         <input type="password" name="password2" class="form-control">
     </div>
-    <input type="submit" class="btn btn-lg btn-primary" value="Регистрация">
+    <div class ="form-group">
+        <label for = "key">Ключ</label>
+        <input type = "password" name="key" class="form-control">
+    </div>
+    <input type="submit" class="btn btn-lg btn-primary full-btn" value="Регистрация">
 </form>
