Code dryed. Morphology model, add page, index page and wgole functionality added. Fixed bug with verifying uniqe researches.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -140,6 +140,20 @@
     /* display: inline-block;
     text-align: center; */
 }
+
+/* .third-width{
+    width: 30%;
+} */
+.flex-box{
+    display: flex;
+}
+.form-group{
+    margin-left:  5px;
+    margin-right: 5px;
+}
+.inline-div{
+    width: 100%;
+}
 /* .logo-register{
     margin-right: 1%;
 }
