--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -17,7 +17,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="/antropology">Антропометрия</a>
-                    <a class="dropdown-item" href="#">Морфология</a>
+                    <a class="dropdown-item" href="/morphology">Морфология</a>
                     <a class="dropdown-item" href="#">Спирография</a>
                 </div>
             </li>
