--- a/views/researches/antropology/add.handlebars
+++ b/views/researches/antropology/add.handlebars
@@ -1,41 +1,48 @@
 <form action="/antropology" method="POST">
-    <div class="form-group">
-        <label for="studentNumber">Номер студенческого билета осбледуемого</label>
-        <input type="text" name="studentNumber" class="form-control" value="" autofocus required>
-    </div>
-    <div class="form-group">
-        <label for="stayHeight">Рост стоя</label>
-        <input type="text" name="stayHeight" class="form-control" value="{{stayHeight}}" required>
-    </div>
-    <div class="form-group">
-        <label for="sitHeight">Рост сидя</label>
-        <input type="text" name="sitHeight" class="form-control" value="{{sitHeight}}" required>
-    </div>
-    <div class="form-group">
-        <label for="handWidth">Размах рук</label>
-        <input type="text" name="handWidth" class="form-control" value="{{handWidth}}" required>
-    </div>
-    <div class="form-group">
-        <label for="weight">Вес</label>
-        <input type="text" name="weight" class="form-control" value="{{weight}}" required>
-    </div>
-    <div class="form-group">
-        <label for="chestOnBreath">Объём грудной клетки в покое</label>
-        <input type="text" name="chestOnBreath" class="form-control" value="{{chestOnBreath}}" required>
-    </div>
-    <div class="form-group">
-        <label for="chestOnFullBreath">Объём грудной клетки при полном вдохе</label>
-        <input type="text" name="chestOnFullBreath" class="form-control" value="{{chestOnFullBreath}}" required>
-    </div>
-    <div class="form-group">
-        <label for="chestOnMaxBreath">Объём грудной клетки при макс. вдохе</label>
-        <input type="text" name="chestOnMaxBreath" class="form-control" value="{{chestOnMaxBreath}}" required>
+    <div class="flex-box">
+        <div class="inline-div">
+            <div class="form-group">
+                <label for="studentNumber">Номер студенческого билета осбледуемого</label>
+                <input type="text" name="studentNumber" class="form-control" value="" autofocus required>
+            </div>
+            <div class="form-group">
+                <label for="stayHeight">Рост стоя</label>
+                <input type="text" name="research[stayHeight]" class="form-control" value="{{research.stayHeight}}" required>
+            </div>
+            <div class="form-group">
+                <label for="sitHeight">Рост сидя</label>
+                <input type="text" name="research[sitHeight]" class="form-control" value="{{research.sitHeight}}" required>
+            </div>
+            <div class="form-group">
+                <label for="handWidth">Размах рук</label>
+                <input type="text" name="research[handWidth]" class="form-control" value="{{research.handWidth}}" required>
+            </div>
+        </div>
+        <div class="inline-div">
+            <div class="form-group">
+                <label for="weight">Вес</label>
+                <input type="text" name="research[weight]" class="form-control" value="{{research.weight}}" required>
+            </div>
+            <div class="form-group">
+                <label for="chestOnBreath">Объём грудной клетки в покое</label>
+                <input type="text" name="research[chestOnBreath]" class="form-control" value="{{research.chestOnBreath}}" required>
+            </div>
+            <div class="form-group">
+                <label for="chestOnFullBreath">Объём грудной клетки при полном вдохе</label>
+                <input type="text" name="research[chestOnFullBreath]" class="form-control" value="{{research.chestOnFullBreath}}" required>
+            </div>
+            <div class="form-group">
+                <label for="chestOnMaxBreath">Объём грудной клетки при макс. вдохе</label>
+                <input type="text" name="research[chestOnMaxBreath]" class="form-control" value="{{research.chestOnMaxBreath}}" required>
+            </div>
+        </div>
     </div>
     <div class="form-group">
         <label for="researchDate">Дата проведения обследования</label>
-        <input type="date" name="researchDate" class="form-control" value= "{{formatDate researchDate "YYYY-MM-DD"}}" required>
+        <input type="date" name="research[researchDate]" class="form-control" value="{{formatDate research.researchDate "YYYY-MM-DD"}}"
+            required>
     </div>
-    <div class="form-group">
+    <div class="form-group third-width">
         <input class="form-control btn btn-lg btn-primary" type="submit" value="Готово">
     </div>
 </form>
