ECG functionality added

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -18,7 +18,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="/antropology">Антропометрия</a>
                     <a class="dropdown-item" href="/morphology">Морфология</a>
-                    <a class="dropdown-item" href="#">Спирография</a>
+                    <a class="dropdown-item" href="/ecg">ЭКГ</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
