All research models and functionality added. Analytics are incoming.

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -18,7 +18,11 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="/antropology">Антропометрия</a>
                     <a class="dropdown-item" href="/morphology">Морфология</a>
+                    <a class="dropdown-item" href="/spyro">Спирография</a>
+                    <a class="dropdown-item" href="/shg">Проба Штанге/Генчи</a>
+                    <a class="dropdown-item" href="/pr">Проба руфье</a>
                     <a class="dropdown-item" href="/ecg">ЭКГ</a>
+                    <a class="dropdown-item" href="/op">ОП</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
