--- a/views/partials/_add.handlebars
+++ b/views/partials/_add.handlebars
@@ -1,1 +1,5 @@
-<a href = "{{way}}/add" class = "add-button"><i data-tooltip="Добавить обследование" class = "fa fa-plus-circle helper"></i></a>
+<div class="side-buttons">
+    <a href="{{way}}/add" class="add-button"><i data-tooltip="Добавить обследование"
+            class="fa fa-plus-circle helper"></i></a>
+    <a href="/analysis{{way2}}/perform" class="add-button"><i data-tooltip="Провести анализ данных" class="fas fa-diagnoses"></i></a>
+</div>
