--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -20,6 +20,21 @@
                     <a class="dropdown-item" href="/morphology">Морфология</a>
                     <a class="dropdown-item" href="/spyro">Спирография</a>
                     <a class="dropdown-item" href="/shg">Проба Штанге/Генчи</a>
+                    <a class="dropdown-item" href="/pr">Проба Руфье</a>
+                    <a class="dropdown-item" href="/ecg">ЭКГ</a>
+                    <a class="dropdown-item" href="/op">Ортостатическая проба</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Анализ
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="/analysis/antrmorph">Данные Антропометрии и Морфологии</a>
+                    <a class="dropdown-item" href="/analysis/pr">Данные пробы Руфье</a>
+                    <a class="dropdown-item" href="/analysis/shg">Данные пробы Штанге/Генчи</a>
+                    <a class="dropdown-item" href="/shg">*</a>
                     <a class="dropdown-item" href="/pr">Проба руфье</a>
                     <a class="dropdown-item" href="/ecg">ЭКГ</a>
                     <a class="dropdown-item" href="/op">ОП</a>
