--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,7 @@
     <script src="/js/tableScripts/sortTable.js"></script>
     <script src="/js/tableScripts/changeArrows.js"></script>
     <script src = "/js/tableScripts/headerHelp.js"></script>
+    <script src = "/js/tableScripts/createReport.js"></script>
 </body>
 
 </html>
