--- a/views/researches/ecg/index.handlebars
+++ b/views/researches/ecg/index.handlebars
@@ -41,7 +41,7 @@
                 <td>{{RV5}}</td>
                 <td>{{SV1}}</td>
                 <td>{{RS}}</td>
-                <td><span data-tooltip="{{Note}}" class="helper btn btn-xs btn-dark inline-div">Примечание</span></td>
+                <td><span data-report="{{Note}}" class="report btn btn-xs btn-dark inline-div">Примечание</span></td>
                 <td>{{formatDate researchDate 'DD-MM-YYYY'}}</td>
 
                 <td>
