--- a/views/partials/_dashboard.handlebars
+++ b/views/partials/_dashboard.handlebars
@@ -1,7 +1,7 @@
 <button class="search-button"><i class="fa fa-search"></i></button>
 <div class="dashboard">
     <h3>Поиск</h3>
-    <form action="{{way}}/search" method="POST">
+    <form action="{{way3}}/search" method="POST">
         <div class="form-group">
             <label for="studentSearch">Студенты: </label>
             <input class="form-control" type="text" name="studentSearch">
