--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,6 @@
+nav{
+    z-index: 3000;
+}
 .nav-item{
     border-bottom: 1px #343a40 solid;
 }
@@ -165,14 +168,28 @@
     margin-left: 1%;
 } */
 
-
-.reportWindow{
-    z-index: 2000;
+.blockWindow{
     position: absolute;
-    top: 3;
+    top: 7.5%;
+    width: 100%;
+    height: 100%;
+    background: rgba(150, 150, 150, 0.5);
+    z-index: 2000;
+}
+.reportWindow{
+    border-radius: 7px;
+    position: relative;
+    top: 20%;
     left: 25%;
-    width: 60%;
-    height: 50%;
-    background: rgba(169, 169, 169, 0.3);
-    transition: 0.2s;
+    width: 50%;
+    max-height: 50%;
+    background: white;
+    overflow-y: auto;
+}
+.reportWindow ul{
+    margin: 10px 5px;
+}
+.reportWindow h5{
+    text-align: center;
+    width:100%;
 }
