--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -34,10 +34,9 @@
                     <a class="dropdown-item" href="/analysis/antrmorph">Данные Антропометрии и Морфологии</a>
                     <a class="dropdown-item" href="/analysis/pr">Данные пробы Руфье</a>
                     <a class="dropdown-item" href="/analysis/shg">Данные пробы Штанге/Генчи</a>
-                    <a class="dropdown-item" href="/shg">*</a>
-                    <a class="dropdown-item" href="/pr">Проба руфье</a>
-                    <a class="dropdown-item" href="/ecg">ЭКГ</a>
-                    <a class="dropdown-item" href="/op">ОП</a>
+                    <a class="dropdown-item" href="/analysis/op">Данные ортостатической пробы</a>
+                    <a class="dropdown-item" href="/analysis/spyro">Данные спирографии</a>
+                    <a class="dropdown-item" href="/analysis/ecg">Данные ЭКГ</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
