--- a/views/researches/op/index.handlebars
+++ b/views/researches/op/index.handlebars
@@ -41,10 +41,10 @@
                 <td>{{dad2}}</td>
                 <td>{{formatDate researchDate 'DD-MM-YYYY'}}</td>
                 <td>
-                    <a class="btn btn-xs btn-warning" href="/ecg/{{_id}}/edit">Изменить</a>
+                    <a class="btn btn-xs btn-warning" href="/op/{{_id}}/edit">Изменить</a>
                 </td>
                 <td class="delete-td">
-                    <form class="inline-form" action="/ecg/{{_id}}?_method=DELETE" method="POST">
+                    <form class="inline-form" action="/op/{{_id}}?_method=DELETE" method="POST">
                         <button class="btn btn-xs btn-danger">Удалить</button>
                     </form>
                 </td>
