--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -47,6 +47,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="/students">Список</a>
                     <a class="dropdown-item" href="/students/add">Добавить</a>
+                    <a class="dropdown-item" href="/students/import">Импорт</a>
                 </div>
             </li>
             {{/if}}
