--- a/views/researches/antropology/add.handlebars
+++ b/views/researches/antropology/add.handlebars
@@ -17,12 +17,12 @@
                 <label for="handWidth">Размах рук</label>
                 <input type="text" name="research[handWidth]" class="form-control" value="{{research.handWidth}}" required>
             </div>
-        </div>
-        <div class="inline-div">
             <div class="form-group">
                 <label for="weight">Вес</label>
                 <input type="text" name="research[weight]" class="form-control" value="{{research.weight}}" required>
             </div>
+        </div>
+        <div class="inline-div">
             <div class="form-group">
                 <label for="chestOnBreath">Объём грудной клетки в покое</label>
                 <input type="text" name="research[chestOnBreath]" class="form-control" value="{{research.chestOnBreath}}" required>
@@ -34,6 +34,14 @@
             <div class="form-group">
                 <label for="chestOnMaxBreath">Объём грудной клетки при макс. вдохе</label>
                 <input type="text" name="research[chestOnMaxBreath]" class="form-control" value="{{research.chestOnMaxBreath}}" required>
+            </div>
+            <div class="form-group">
+                <label for="chestOnFullBreath">Объём талии</label>
+                <input type="text" name="research[beltVolume]" class="form-control" value="{{research.chestOnFullBreath}}" required>
+            </div>
+            <div class="form-group">
+                <label for="chestOnMaxBreath">Объём бедра</label>
+                <input type="text" name="research[chestVolume]" class="form-control" value="{{research.chestOnMaxBreath}}" required>
             </div>
         </div>
     </div>
