--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -23,6 +23,7 @@
                     <a class="dropdown-item" href="/pr">Проба Руфье</a>
                     <a class="dropdown-item" href="/ecg">ЭКГ</a>
                     <a class="dropdown-item" href="/op">Ортостатическая проба</a>
+                    <a class="dropdown-item" href="/import">Импорт данных обследований</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
