Report for student is fully completed. Decided to draw only one graph per time. Fixed bug with editing researches. Fixed bug with sorting tables by date.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,9 @@
     <script src="/js/tableScripts/changeArrows.js"></script>
     <script src = "/js/tableScripts/headerHelp.js"></script>
     <script src = "/js/tableScripts/createReport.js"></script>
+    <script src= "/js/studentReport.js"></script>
+    <script src= "/js/tableScripts/showDynamics.js"></script>
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </body>
 
 </html>
