--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -58,13 +58,13 @@
             <li class="nav-item">
                 <p class="nav-p">{{user.username}}</p>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/users/register" {{checkStatus user.status}}>Регистрация</a>
+            </li>
             <li class="bav-item">
                 <a class="nav-link" href="/users/logout">Выйти</a>
             </li>
             {{else}}
-            <li class="nav-item">
-                <a class="nav-link" href="/users/register">Регистрация</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/users/login">Вход</a>
             </li>
