--- a/views/researches/antropology/index.handlebars
+++ b/views/researches/antropology/index.handlebars
@@ -1,7 +1,11 @@
+{{#if report}}
+{{>_select}}
+{{else}}
 {{>_dashboard}}
 {{>_add}}
+{{/if}}
 <div class="table-responsive">
-    <table class="table table-bordered table-hover table-sm">
+    <table class="table table-bordered table-hover table-sm {{reportTable report}}">
         <thead class="thead-dark">
             <tr>
                 <th class="table-column-header">Фамилия <i class="arrow fa fa-sort"></i></th>
@@ -20,7 +24,7 @@
                 </th>
                 <th data-tooltip = "Объём талии" class="table-column-header helper">ОТ <i class="arrow fa fa-sort"></i></th>
                 <th data-tooltip = "Объём бедра" class="table-column-header helper">ОБ <i class="arrow fa fa-sort"></i></th>
-                <th class="table-column-header">Дата обследования <i class="arrow fa fa-sort"></i></th>
+                <th class="table-column-header date-col">Дата обследования <i class="arrow fa fa-sort"></i></th>
                 <th colspan="2" class="operations">Операции</th>
             </tr>
         </thead>
@@ -55,3 +59,6 @@
         </tbody>
     </table>
 </div>
+{{#if report}}
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+{{/if}}
