--- a/views/researches/op/index.handlebars
+++ b/views/researches/op/index.handlebars
@@ -1,7 +1,11 @@
+{{#if report}}
+{{>_select}}
+{{else}}
 {{>_dashboard}}
 {{>_add}}
+{{/if}}
 <div class="table-responsive">
-    <table class="table table-bordered table-hover table-sm">
+    <table class="table table-bordered table-hover table-sm {{reportTable report}}">
         <thead class="thead-dark">
             <tr>
                 <th class="table-column-header">Фамилия <i class="arrow fa fa-sort"></i></th>
@@ -18,7 +22,7 @@
                 <th class="table-column-header">P<sub>2</sub> <i class="arrow fa fa-sort"></i></th>
                 <th class="table-column-header">САД<sub>2</sub> <i class="arrow fa fa-sort"></i></th>
                 <th class="table-column-header">ДАД<sub>2</sub> <i class="arrow fa fa-sort"></i></th>
-                <th class="table-column-header">Дата обследования <i class="arrow fa fa-sort"></i></th>
+                <th class="table-column-header date-col">Дата обследования <i class="arrow fa fa-sort"></i></th>
                 <th colspan="2" class="operations">Операции</th>
             </tr>
         </thead>
