Physics table added

--- a/views/researches/ecg/index.handlebars
+++ b/views/researches/ecg/index.handlebars
@@ -61,3 +61,6 @@
         </tbody>
     </table>
 </div>
+{{#if report}}
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+{{/if}}
