--- a/views/researches/import.handlebars
+++ b/views/researches/import.handlebars
@@ -9,6 +9,7 @@
             <option class="search-option" value="pr">Проба Руфье</option>
             <option class="search-option" value="ecg">ЭКГ</option>
             <option class="search-option" value="op">Ортостатическая проба</option>
+            <option class="search-option" value="physics">Данные физической подготовки</option>
         </select>
         <input class="custom-select  form-control fourth-width mt0" type="date" name="date" required>
     </div>
