--- a/views/researches/shg/index.handlebars
+++ b/views/researches/shg/index.handlebars
@@ -43,3 +43,6 @@
         </tbody>
     </table>
 </div>
+{{#if report}}
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+{{/if}}
