--- a/views/researches/spyro/index.handlebars
+++ b/views/researches/spyro/index.handlebars
@@ -45,3 +45,6 @@
         </tbody>
     </table>
 </div>
+{{#if report}}
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+{{/if}}
