--- a/views/partials/_select.handlebars
+++ b/views/partials/_select.handlebars
@@ -10,6 +10,11 @@
             <option class="search-option" value="pr" {{selectResearch selected "pr"}}>Проба Руфье</option>
             <option class="search-option" value="ecg" {{selectResearch selected "ecg"}}>ЭКГ</option>
             <option class="search-option" value="op" {{selectResearch selected "op"}}>Ортостатическая проба</option>
+            <option class="search-option" value="antrmorph analysis" {{selectResearch selected "antrmorph"}}>Данные Антропометрии и Мофрологии</option>
+            <option class="search-option" value="spyro analysis" {{selectResearch selected "spyro"}}>Данные Спирографии</option>
+            <option class="search-option" value="shg analysis" {{selectResearch selected "spyro"}}>Данные пробы Штанге и Генчи</option>
+            <option class="search-option" value="pr analysis" {{selectResearch selected "shg"}}>Данные пробы Руфье</option>
+            <option class="search-option" value="ecg analysis" {{selectResearch selected "pr"}}>Данные ЭКГ</option>
         </select>
     </div>
 </form>
