--- a/views/analysis/ecgIndex.handlebars
+++ b/views/analysis/ecgIndex.handlebars
@@ -1,7 +1,11 @@
+{{#if report}}
+{{>_select}}
+{{else}}
 {{>_dashboard}}
 {{>_add}}
+{{/if}}
 <div class="table-responsive">
-    <table class="table table-bordered table-hover table-sm">
+    <table class="table table-bordered table-hover table-sm {{reportTable report}} analysis">
         <thead class="thead-dark">
             <tr>
                 <th class="table-column-header">Фамилия <i class="arrow fa fa-sort"></i></th>
@@ -28,3 +32,6 @@
         </tbody>
     </table>
 </div>
+{{#if report}}
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+{{/if}}
